# vk-bootstrap-triangle

./: CMakeLists.txt  README.md  main.cpp  main_dr.cpp
.github/workflows/: build-cpp.yml
shaders/: triangle.vert
src/async_compute/: CMakeLists.txt  main.cpp
src/async_compute/shaders/: quad.frag
src/bda/: CMakeLists.txt  main.cpp
src/bda/shaders/: triangle.vert
src/bindless/: CMakeLists.txt  main.cpp
src/bindless/data/DamagedHelmet/glTF/: DamagedHelmet.gltf
src/bindless/shaders/: GGXModel.hlsli  ibl.hlsl  skybox.hlsl
src/compute_shader/: CMakeLists.txt  main.cpp
src/dynamic_rendering/: CMakeLists.txt  main.cpp
src/dynamic_rendering/shaders/: triangle.frag
src/gears/: CMakeLists.txt  main.cpp
src/gears/shaders/: gear.frag  gear.vert
src/headless_compute/: CMakeLists.txt  main.cpp
src/headless_renderer/: CMakeLists.txt  main.cpp
src/ibl/: CMakeLists.txt  main.cpp
src/ibl/data/: envBrdf.hdr
src/ibl/data/prefilterEnvMaps/: prefilterMip1.hdr  prefilterMip2.hdr  prefilterMip3.hdr  prefilterMip4.hdr  prefilterMip5.hdr  prefilterMip6.hdr  prefilterMip7.hdr
src/ibl/shaders/: ibl.hlsl  skybox.hlsl
src/imgui/: CMakeLists.txt  main.cpp
src/mesh_shader/: CMakeLists.txt  main.cpp
src/mesh_shader/shaders/: triangle.mesh  triangle.task
src/multi_queue/: CMakeLists.txt  main.cpp
src/multi_queue/shaders/: Noise.hlsl  quad.vert
src/ozz_cs_skinning/: CMakeLists.txt  main.cpp
src/ozz_cs_skinning/shaders/: ozz.vert  skinning.comp
src/ozz_demo/: CMakeLists.txt  main.cpp
src/ozz_demo/shaders/: ozz.vert
src/pbr/: CMakeLists.txt  main.cpp
src/pbr/shaders/: pbr.hlsl
src/shader_object/: CMakeLists.txt  main.cpp
src/timeline_semaphore/: CMakeLists.txt  main.cpp
src/triangle/: CMakeLists.txt  main.cpp
